--- a/Proyecto2_201122872/Proyecto2_201122872/Proyecto2_201122872.csproj
+++ b/Proyecto2_201122872/Proyecto2_201122872/Proyecto2_201122872.csproj
@@ -31,6 +31,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>
+    </StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="FastColoredTextBox">
       <HintPath>..\..\..\..\..\..\..\LibreriasIrony\FastColoredTextBox.dll</HintPath>
@@ -75,12 +79,25 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\crearClase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\crearClase.Designer.cs">
+      <DependentUpon>crearClase.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UML\Atributo.cs" />
+    <Compile Include="UML\Clase.cs" />
+    <Compile Include="UML\clasesDiagrama.cs" />
     <Compile Include="UML\Funcion.cs" />
+    <Compile Include="UML\listaAtributos.cs" />
     <Compile Include="UML\variable.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\crearClase.resx">
+      <DependentUpon>crearClase.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -106,7 +123,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Errores\" />
-    <Folder Include="Formularios\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
