--- a/Proyecto2_201122872/Proyecto2_201122872/Proyecto2_201122872.csproj
+++ b/Proyecto2_201122872/Proyecto2_201122872/Proyecto2_201122872.csproj
@@ -67,6 +67,7 @@
     <Compile Include="AnalizadorPython\AccionPy.cs" />
     <Compile Include="AnalizadorPython\AnalizadorPy.cs" />
     <Compile Include="AnalizadorPython\ArbolPy.cs" />
+    <Compile Include="AnalizadorPython\GramaticaPython.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
