--- a/Proyecto2_201122872/Proyecto2_201122872/Proyecto2_201122872.csproj
+++ b/Proyecto2_201122872/Proyecto2_201122872/Proyecto2_201122872.csproj
@@ -68,6 +68,7 @@
     <Compile Include="AnalizadorPython\AnalizadorPy.cs" />
     <Compile Include="AnalizadorPython\ArbolPy.cs" />
     <Compile Include="AnalizadorPython\GramaticaPython.cs" />
+    <Compile Include="AnalizadorPython\GramaticaTree.cs" />
     <Compile Include="Errores\ErrorA.cs" />
     <Compile Include="Errores\ListaErrores.cs" />
     <Compile Include="Form1.cs">
