--- a/Proyecto2_201122872/Proyecto2_201122872/Proyecto2_201122872.csproj
+++ b/Proyecto2_201122872/Proyecto2_201122872/Proyecto2_201122872.csproj
@@ -95,11 +95,21 @@
     <Compile Include="Formularios\Reportes.Designer.cs">
       <DependentUpon>Reportes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Generacion3D\TablaSimbolos\Constantes3D.cs" />
+    <Compile Include="Generacion3D\TablaSimbolos\Simbolo.cs" />
+    <Compile Include="Generacion3D\TablaSimbolos\tablaDeSimbolos.cs" />
+    <Compile Include="Instrucciones\Cuerpo.cs" />
+    <Compile Include="Instrucciones\Declaracion.cs" />
+    <Compile Include="Instrucciones\ExpresionLlamada.cs" />
+    <Compile Include="Instrucciones\Instruccion.cs" />
+    <Compile Include="Instrucciones\out_string.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UML\Arreglo.cs" />
     <Compile Include="UML\Atributo.cs" />
     <Compile Include="UML\Clase.cs" />
     <Compile Include="UML\clasesDiagrama.cs" />
+    <Compile Include="UML\elementoVarArreglo.cs" />
     <Compile Include="UML\Funcion.cs" />
     <Compile Include="UML\listaAtributos.cs" />
     <Compile Include="UML\listaFunciones.cs" />
