--- a/Proyecto2_201122872/Proyecto2_201122872/Proyecto2_201122872.csproj
+++ b/Proyecto2_201122872/Proyecto2_201122872/Proyecto2_201122872.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Formularios\Reportes.Designer.cs">
       <DependentUpon>Reportes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Generacion3D\Ambitos.cs" />
     <Compile Include="Generacion3D\GeneracionCodigo.cs" />
     <Compile Include="Generacion3D\TablaSimbolos\Constantes3D.cs" />
     <Compile Include="Generacion3D\TablaSimbolos\Simbolo.cs" />
@@ -104,6 +105,12 @@
     <Compile Include="Instrucciones\ExpresionLlamada.cs" />
     <Compile Include="Instrucciones\Instruccion.cs" />
     <Compile Include="Instrucciones\out_string.cs" />
+    <Compile Include="Principal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Principal.Designer.cs">
+      <DependentUpon>Principal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UML\Arreglo.cs" />
@@ -127,6 +134,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\Reportes.resx">
       <DependentUpon>Reportes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Principal.resx">
+      <DependentUpon>Principal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
