#35 Generacion de codigo para metodos y funciones

--- a/Proyecto2_201122872/Proyecto2_201122872/Proyecto2_201122872.csproj
+++ b/Proyecto2_201122872/Proyecto2_201122872/Proyecto2_201122872.csproj
@@ -96,7 +96,9 @@
       <DependentUpon>Reportes.cs</DependentUpon>
     </Compile>
     <Compile Include="Generacion3D\Ambitos.cs" />
+    <Compile Include="Generacion3D\Codigo.cs" />
     <Compile Include="Generacion3D\GeneracionCodigo.cs" />
+    <Compile Include="Generacion3D\nodoCondicion.cs" />
     <Compile Include="Generacion3D\TablaSimbolos\Constantes3D.cs" />
     <Compile Include="Generacion3D\TablaSimbolos\Simbolo.cs" />
     <Compile Include="Generacion3D\TablaSimbolos\tablaDeSimbolos.cs" />
