#42 declaraion de arreglos y valadacion de tipos para la suma

--- a/Proyecto2_201122872/Proyecto2_201122872/Proyecto2_201122872.csproj
+++ b/Proyecto2_201122872/Proyecto2_201122872/Proyecto2_201122872.csproj
@@ -99,6 +99,8 @@
     <Compile Include="Generacion3D\Codigo.cs" />
     <Compile Include="Generacion3D\GeneracionCodigo.cs" />
     <Compile Include="Generacion3D\nodoCondicion.cs" />
+    <Compile Include="Generacion3D\TablaSimbolos\Arreglos\Dimension.cs" />
+    <Compile Include="Generacion3D\TablaSimbolos\Arreglos\listaDimensiones.cs" />
     <Compile Include="Generacion3D\TablaSimbolos\Constantes3D.cs" />
     <Compile Include="Generacion3D\TablaSimbolos\Simbolo.cs" />
     <Compile Include="Generacion3D\TablaSimbolos\tablaDeSimbolos.cs" />
