--- a/Proyecto2_201122872/Proyecto2_201122872/Proyecto2_201122872.csproj
+++ b/Proyecto2_201122872/Proyecto2_201122872/Proyecto2_201122872.csproj
@@ -109,6 +109,10 @@
     <Compile Include="Instrucciones\ExpresionLlamada.cs" />
     <Compile Include="Instrucciones\Instruccion.cs" />
     <Compile Include="Instrucciones\out_string.cs" />
+    <Compile Include="Interprete3D\AccionInterprete.cs" />
+    <Compile Include="Interprete3D\Arbol3D.cs" />
+    <Compile Include="Interprete3D\ConstantesInterprete.cs" />
+    <Compile Include="Interprete3D\Sintactico.cs" />
     <Compile Include="Principal.cs">
       <SubType>Form</SubType>
     </Compile>
